--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 .App {
   text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: "Calibri" , sans-serif ;
+
 }
 
 *{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
 }
 
