--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,37 +1,82 @@
 .navbar {
-    width: 100%;
-    height: 100px;
-    background-color: #242527;
-    display: flex;
-    flex-direction: row;
-}
-
-.navbar .logo {
-    flex: 50%;
-    height: 100%;
     display: flex;
     align-items: center;
-    padding-left: 150px;
+    justify-content: space-between;
+    height: 80px;
+    background-color: #2a2b31;
+    color: #eee;
+    padding: 0 150px;
 }
 
-.navbar .logo img {
-    width: 80px;
+img{
+    width:70px;
 }
 
-.navbar .links {
-    flex: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.navbar a {
-    color: white;
+.links a {
+    margin: 0 1rem;
+    color: #eee;
     text-decoration: none;
-    margin: 20px;
     font-family: "Calibri" , sans-serif;
     font-size: x-large;
 }
 
+.links a:hover {
+    color: #7d7d7d;
+}
 
+ .navBtn {
+    padding: 5px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #eee;
+    visibility: hidden;
+    opacity: 0;
+    font-size: 1.8rem;
+}
+
+.links {
+    display: flex;
+    align-items: center;
+}
+
+
+@media only screen and (max-width: 850px) {
+    .navbar{
+        padding: 0 50px;
+    }
+     .navBtn {
+        visibility: visible;
+        opacity: 1;
+    }
+
+     .links {
+         position: fixed;
+         top: -100vh;
+         left: 0;
+         height: 100%;
+         width: 100%;
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         justify-content: center;
+         gap: 1.5rem;
+         background-color: #2a2b31;
+         transition: 1s;
+    }
+
+    .links a {
+        font-size: 1.5rem;
+    }
+
+     .responsiveNav {
+        transform: translateY(100vh);
+    }
+
+     .navCloseBtn {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+    }
+}
