--- a/src/components/Home/HomePage.module.css
+++ b/src/components/Home/HomePage.module.css
@@ -40,7 +40,7 @@
     border-radius: 5px;
     cursor: pointer;
     justify-content: center;
-    background-color: #121619;
+    background-color: #2a2b31;
     height: 70px;
     width: 550px;
     color: white;
