--- a/src/components/Others/Footer.module.css
+++ b/src/components/Others/Footer.module.css
@@ -34,6 +34,15 @@
     color: white;
 }
 
+.info{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+.info p{
+   margin: 5px;
+}
+
 
 @media only screen and (max-width: 850px) {
     .socialMedia svg {
